New reactive core WIP

--- a/src/Core/FileTime.Core.Abstraction/FileTime.Core.Abstraction.csproj
+++ b/src/Core/FileTime.Core.Abstraction/FileTime.Core.Abstraction.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Library\DeclarativeProperty\DeclarativeProperty.csproj" />
     <ProjectReference Include="..\..\Library\InitableService\InitableService.csproj" />
   </ItemGroup>
 
