--- a/src/Core/FileTime.Core.Timeline/FileTime.Core.Timeline.csproj
+++ b/src/Core/FileTime.Core.Timeline/FileTime.Core.Timeline.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\FileTime.Core.Abstraction\FileTime.Core.Abstraction.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+  </ItemGroup>
+
 </Project>
