--- a/src/GuiApp/Avalonia/FileTime.GuiApp.App/FileTime.GuiApp.App.csproj
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp.App/FileTime.GuiApp.App.csproj
@@ -52,4 +52,7 @@
   <ItemGroup Condition="'$(Configuration)' == 'Debug'">
     <Content Include="appsettings.Development.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
+  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+    <Content Include="appsettings.Local.json" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
 </Project>
