--- a/src/Server/FileTime.Server/appsettings.Development.json
+++ b/src/Server/FileTime.Server/appsettings.Development.json
@@ -3,10 +3,10 @@
     "MinimumLevel": {
       "Default": "Verbose",
       "Override": {
+        "System": "Information",
         "Microsoft": "Information",
-        "System": "Warning",
-        "Microsoft.AspNetCore.SignalR": "Verbose",
-        "Microsoft.AspNetCore.Http.Connections": "Verbose"
+        "Microsoft.AspNetCore.SignalR": "Debug",
+        "Microsoft.AspNetCore.Http.Connections": "Debug"
       }
     }
   }
