--- a/src/Core/FileTime.Core.Command/FileTime.Core.Command.csproj
+++ b/src/Core/FileTime.Core.Command/FileTime.Core.Command.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ByteSize" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
   </ItemGroup>
 
