--- a/src/Server/FileTime.Server.Common/FileTime.Server.Common.csproj
+++ b/src/Server/FileTime.Server.Common/FileTime.Server.Common.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.9" />
+      <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
       <PackageReference Include="TypedSignalR.Client" Version="3.4.0">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
