--- a/src/Server/FileTime.Server/appsettings.Development.json
+++ b/src/Server/FileTime.Server/appsettings.Development.json
@@ -5,8 +5,8 @@
       "Override": {
         "System": "Information",
         "Microsoft": "Information",
-        "Microsoft.AspNetCore.SignalR": "Debug",
-        "Microsoft.AspNetCore.Http.Connections": "Debug"
+        "Microsoft.AspNetCore.SignalR": "Error",
+        "Microsoft.AspNetCore.Http.Connections": "Error"
       }
     }
   }
