--- a/src/Core/FileTime.Core.Command/FileTime.Core.Command.csproj
+++ b/src/Core/FileTime.Core.Command/FileTime.Core.Command.csproj
@@ -5,7 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ByteSize" Version="2.1.1" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
   </ItemGroup>
 
