--- a/src/Providers/FileTime.Providers.Local.Abstractions/FileTime.Providers.Local.Abstractions.csproj
+++ b/src/Providers/FileTime.Providers.Local.Abstractions/FileTime.Providers.Local.Abstractions.csproj
@@ -15,4 +15,11 @@
     <ProjectReference Include="..\..\AppCommon\FileTime.App.Core.Abstraction\FileTime.App.Core.Abstraction.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PropertyChanged.SourceGenerator" Version="1.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
