Use Information loglevel for signalr

--- a/src/GuiApp/Avalonia/FileTime.GuiApp/appsettings.Development.json
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/appsettings.Development.json
@@ -5,8 +5,8 @@
       "Override": {
         "Microsoft": "Information",
         "System": "Warning",
-        "Microsoft.AspNetCore.SignalR": "Verbose",
-        "Microsoft.AspNetCore.Http.Connections": "Verbose"
+        "Microsoft.AspNetCore.SignalR": "Information",
+        "Microsoft.AspNetCore.Http.Connections": "Information"
       }
     }
   }
