--- a/src/Core/FileTime.Core.Command/FileTime.Core.Command.csproj
+++ b/src/Core/FileTime.Core.Command/FileTime.Core.Command.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
   <PropertyGroup>
