--- a/src/Core/FileTime.Core.CommandHandlers/FileTime.Core.CommandHandlers.csproj
+++ b/src/Core/FileTime.Core.CommandHandlers/FileTime.Core.CommandHandlers.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\FileTime.Core.Command\FileTime.Core.Command.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+  </ItemGroup>
+
 </Project>
