--- a/src/GuiApp/Avalonia/FileTime.GuiApp/FileTime.GuiApp.csproj
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/FileTime.GuiApp.csproj
@@ -52,7 +52,7 @@
     <ProjectReference Include="..\FileTime.GuiApp.App\FileTime.GuiApp.App.csproj" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup Condition="Exists('appsettings.Development.json') AND '$(Configuration)' == 'Debug'">
     <Content Include="appsettings.Development.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
   <ItemGroup Condition="Exists('appsettings.Local.json') AND '$(Configuration)' == 'Debug'">
