--- a/src/Server/FileTime.Server.Common/FileTime.Server.Common.csproj
+++ b/src/Server/FileTime.Server.Common/FileTime.Server.Common.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Core\FileTime.Core.Serialization\FileTime.Core.Serialization.csproj" />
       <ProjectReference Include="..\FileTime.Server.Common.Abstractions\FileTime.Server.Common.Abstractions.csproj" />
     </ItemGroup>
 
