Console size scan

--- a/src/AppCommon/FileTime.App.Core.Abstraction/FileTime.App.Core.Abstraction.csproj
+++ b/src/AppCommon/FileTime.App.Core.Abstraction/FileTime.App.Core.Abstraction.csproj
@@ -25,4 +25,9 @@
     <ProjectReference Include="..\..\Library\GeneralInputKey\GeneralInputKey.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Models\Traits\" />
+  </ItemGroup>
+
 </Project>
