--- a/src/Tools/FileTime.Tools.VirtualDiskSources.Abstractions/FileTime.Tools.VirtualDiskSources.Abstractions.csproj
+++ b/src/Tools/FileTime.Tools.VirtualDiskSources.Abstractions/FileTime.Tools.VirtualDiskSources.Abstractions.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>FileTime.Tools.VirtualDiskSources</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
